# autonomous-codebase-understanding-agent

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
agent/: graph.py  llm_wrapper.py  prompts.py  state.py
agent/nodes/: finalizer.py  planner.py  retriever.py  synthesizer.py  verifier.py
app/: api.py  config.py  main.py  schemas.py
core/: __init__.py  agent_service.py  architecture_service.py  citation_service.py  constants.py  context_optimizer.py  error_handler.py  exceptions.py  indexing_service.py  llm_service.py  query_variation.py  repository_deletion_service.py  repository_service.py
eval/: eval_runner.py  metrics.py
eval/datasets/: test_questions.json
indexing/: chunking.py  embeddings.py  loader.py  metadata_store.py  pipeline.py  vector_store.py
scripts/: quickstart.py
tests/: test_agent.py  test_indexing.py  test_retrieval.py
tools/: file_tools.py  repo_tools.py  retrieval_tools.py
ui/: streamlit_app.py
